--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+quarkus.jaeger.enabled=false
 quarkus.jaeger.service-name=quarkus-fault-tolerance
 quarkus.jaeger.sampler-type=const
 quarkus.jaeger.sampler-param=1
 quarkus.jaeger.endpoint=http://localhost:14268/api/traces
 quarkus.jaeger.propagation=b3
 quarkus.jaeger.reporter-log-spans=true
+
+quarkus.smallrye-openapi.path=/swagger
